--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,5 @@
 RewriteEngine on
-RewriteRule .* index.php
+RewriteCond %{REQUEST_URI} !index.php
+## if the request is not for a valid file
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ index.php?test=$1 [NC,L]
